HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractPredicateImpureMove/Source/Main.uv
//! Rejected contract specimen for never-pure move expressions in predicates.

public procedure contractPredicateImpureMoveReference(value: unique i32) -> unique i32
|: move value == move value
{
    return move value
}
